--- a/src/components/ProductsGroup/ProductsGroup.module.css
+++ b/src/components/ProductsGroup/ProductsGroup.module.css
@@ -1,5 +1,4 @@
 .productsGroup {
-    background-color: rgb(104, 104, 146);
 }
 
 .productsCards {
